CDR-1451 Cleanup